<resources>
    <string name="app_name">Quiz Code</string>

    <string name="submit">SUBMIT</string>
    <string name="select_quiz">Select Quiz</string>
    <string name="c">C</string>
    <string name="php">PHP</string>
    <string name="num">20</string>

    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="cpp">C++</string>
    <string name="javascript">Javascript</string>
    <string name="html">Html</string>
    <string name="csharp">C#</string>
    <string name="android">Android</string>
    <string name="kotlin">Kotlin</string>
    <string name="mysql">Mysql</string>
    <string name="firebase">Firebase</string>
    <string name="mongodb">Mongo DB</string>
    <string name="select_level">Select Set</string>
    <string name="easy">Set 1</string>
    <string name="medium">Set 2</string>
    <string name="hard">Set 3</string>
    <string name="each">Each set contains 10 questions.</string>
    <string name="leave">Leave</string>
    <string name="dynamic">Time Based</string>
    <string name="remaining">Seconds Remaining</string>

    <string name="total_incorrect">Incorrect Answers :</string>
    <string name="total_correct">Correct Answers :</string>
    <string name="your_score">Your Score :</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="quiz">Welcome to Quiz Code</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>

    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>

</resources>