<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Level"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background3"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

<LinearLayout
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/select_level"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/each"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/easy"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/easy"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/squarestroke"
        android:padding="5dp"
        android:textAlignment="center"/>


    <TextView
        android:id="@+id/medium"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/medium"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/squarestroke"
        android:padding="5dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/hard"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/hard"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/squarestroke"
        android:padding="5dp"
        android:textAlignment="center"/>


</LinearLayout>


</RelativeLayout>