<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:gravity="center"
    android:background="@drawable/background4"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/square"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_correct"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/text"
            android:padding="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/correct"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/text"
            android:padding="10dp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/square"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_incorrect"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/text"
            android:padding="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/incorrect"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/text"
            android:padding="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/square"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_score"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/text"
            android:padding="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/text"
            android:padding="10dp"
            />

    </LinearLayout>

    <TextView
            android:id="@+id/playAgain"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:textAlignment="center"
            android:background="@drawable/round"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/text"
            android:padding="10dp"
             android:layout_marginTop="50dp"
            />


    </LinearLayout>
