<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectQuiz"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/back"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/select_quiz"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


<ScrollView
    android:layout_marginBottom="30dp"
    android:layout_below="@+id/select"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/square"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="40dp"
                >

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:src="@drawable/c"
                    android:layout_margin="10dp"
                    tools:ignore="ContentDescription"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/cssblue"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cpp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/square"
                android:layout_weight="1"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="20dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cpp"
                    android:layout_margin="10dp"
                    tools:ignore="ContentDescription"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cpp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/cssblue"
                    android:layout_marginBottom="5dp"
                    />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/java"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/square"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="40dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:src="@drawable/java"
                    android:layout_margin="10dp"
                    tools:ignore="ContentDescription"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/java"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/cssblue"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/python"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/square"
                android:layout_weight="1"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="20dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:src="@drawable/python"
                    android:layout_margin="10dp"
                    tools:ignore="ContentDescription"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/python"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/cssblue"
                    android:layout_marginBottom="5dp"
                    />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/html"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/square"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="40dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:src="@drawable/html"
                    android:layout_margin="10dp"
                    tools:ignore="ContentDescription"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/cssblue"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/javascript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/square"
                android:layout_weight="1"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="20dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:src="@drawable/javascript"
                    android:layout_margin="10dp"
                    tools:ignore="ContentDescription"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/javascript"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/cssblue"
                    android:layout_marginBottom="5dp"
                    />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/csharp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/square"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="40dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:src="@drawable/csharp"
                    android:layout_margin="10dp"
                    tools:ignore="ContentDescription"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/csharp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/cssblue"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/php"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/square"
                android:layout_weight="1"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="20dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:src="@drawable/php"
                    android:layout_margin="10dp"
                    tools:ignore="ContentDescription"
                    android:padding="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/php"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/cssblue"
                    android:layout_marginBottom="5dp"
                    />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/mysql"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/square"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="40dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:src="@drawable/mysql"
                    android:layout_margin="10dp"
                    tools:ignore="ContentDescription"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mysql"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/cssblue"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mongodb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/square"
                android:layout_weight="1"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="20dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:src="@drawable/mongodb2"
                    android:layout_margin="10dp"
                    tools:ignore="ContentDescription"
                    android:padding="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mongodb"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/cssblue"
                    android:layout_marginBottom="5dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>


</RelativeLayout>
